--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -7485,10 +7485,28 @@ select.has-no-value:not(:focus) {
 .select2-container--default .select2-selection--multiple {
   border: 1px solid #c5c7ca;
   border-radius: 0;
-  height: 30px;
+  min-height: 30px;
 }
-.select2-container--default .select2-selection--single .select2-selection__rendered,
-.select2-container--default .select2-selection--multiple .select2-selection__rendered {
+.select2-container--default .select2-selection--single .select2-selection__content,
+.select2-container--default .select2-selection--multiple .select2-selection__content {
+  font-weight: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.select2-container--default .select2-selection--single .select2-selection__clear {
+  background-image: url("../images/icons/blue/decline.svg");
+  -webkit-background-size: 10px 10px;
+  -moz-background-size: 10px 10px;
+  -o-background-size: 10px 10px;
+  background-size: 10px 10px;
+  background-position: right center;
+  background-repeat: no-repeat;
+  color: transparent;
+  display: inline-block;
+  float: none;
+  width: 15px;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
   display: -ms-flexbox;
   display: -webkit-box;
   display: -webkit-box-flex;
@@ -7505,30 +7523,20 @@ select.has-no-value:not(:focus) {
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
 }
-.select2-container--default .select2-selection--single .select2-selection__rendered > *,
-.select2-container--default .select2-selection--multiple .select2-selection__rendered > * {
+.select2-container--default .select2-selection--single .select2-selection__rendered > * {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   -moz-box-flex: 1;
   flex: 1 1 auto;
 }
-.select2-container--default .select2-selection--single .select2-selection__rendered .select2-selection__content,
-.select2-container--default .select2-selection--multiple .select2-selection__rendered .select2-selection__content {
-  font-weight: normal;
+.select2-container--default .select2-selection--single .select2-selection__rendered .select2-selection__content {
   order: 1;
 }
-.select2-container--default .select2-selection--single .select2-selection__rendered .select2-selection__clear,
-.select2-container--default .select2-selection--multiple .select2-selection__rendered .select2-selection__clear {
+.select2-container--default .select2-selection--single .select2-selection__rendered .select2-selection__clear {
   order: 2;
 }
-.select2-container--default .select2-selection--single .select2-selection__content,
-.select2-container--default .select2-selection--multiple .select2-selection__content {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.select2-container--default .select2-selection--single .select2-selection__clear,
-.select2-container--default .select2-selection--multiple .select2-selection__clear {
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
   background-image: url("../images/icons/blue/decline.svg");
   -webkit-background-size: 10px 10px;
   -moz-background-size: 10px 10px;
@@ -7540,6 +7548,36 @@ select.has-no-value:not(:focus) {
   display: inline-block;
   float: none;
   width: 15px;
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: -webkit-box-flex;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  -moz-box-direction: normal;
+  -moz-box-orient: horizontal;
+  -webkit-box-orient: horizontal;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice > * {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  -moz-box-flex: 1;
+  flex: 1 1 auto;
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice .select2-selection__content {
+  order: 1;
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice .select2-selection__choice__remove {
+  order: 2;
 }
 .select2-container--default .select2-selection__arrow {
   background-image: url("../images/icons/blue/arr_1down.svg");
