some more adjustments, re #6801

--- a/public/assets/stylesheets/less/news.less
+++ b/public/assets/stylesheets/less/news.less
@@ -55,12 +55,13 @@ select.news_area_options {
     height: 116px;
 }
     
-option.news_area_title {
-    padding-left: 26px; 
-    font-weight: bold; 
-    color: #000000; 
+optgroup.news_area_title {
+    text-indent: 26px; 
     background-repeat: no-repeat; 
-    background-color: #d1d1d1;
+
+    option {
+        text-indent: 6px;
+    }
 }
     
 input.news_search_term {
