use unitless line-height (https://css-tricks.com/almanac/properties/l/line-height/#article-header-id-0), re #6801

--- a/public/assets/stylesheets/less/selects.less
+++ b/public/assets/stylesheets/less/selects.less
@@ -41,7 +41,7 @@ select {
 
         &:not([size]) {
             height: @select-height-default;
-            line-height: @select-height-default;
+            line-height: 1;
         }
     }
     &[multiple] {
