--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -40,11 +40,11 @@
             .transition(transform 300ms);
             vertical-align: text-bottom;
         }
-        
+
         position: absolute;
         left: 5px;
         top: 5px;
-        
+
         border-right: 1px solid @brand-color-lighter;
         padding-right: 2px;
     }
@@ -198,6 +198,14 @@ label[for="responsive-toggle"] {
                 &:before {
                     left: (@width - @arrow-height - 2);
                 }
+            }
+        }
+
+        > ul > li {
+            flex: 1 auto;
+
+            &:first-child {
+                flex: 1 1 100%;
             }
         }
     }
