i18n: fix language selector display and form validation regarding empty required inputs, fixes #6830

--- a/public/assets/stylesheets/less/i18n.less
+++ b/public/assets/stylesheets/less/i18n.less
@@ -10,11 +10,16 @@ div.i18n_group.single_lang {
 }
 
 select.i18n {
-    width: auto !important;
-    background-repeat: no-repeat;
-    background-position: left 4px center;
     -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    background-position: left 4px center;
+    background-repeat: no-repeat;
+    background-size: 20px auto !important;
+    cursor: pointer;
     padding: 0px 2px 0px 28px !important;
+    width: auto !important;
 
     height: 22px;;
     option {
