vertically align action menu, adjust actions right and disallow wrapping of actions, re #6823

--- a/public/assets/stylesheets/less/actionmenu.less
+++ b/public/assets/stylesheets/less/actionmenu.less
@@ -1,5 +1,3 @@
-@import url(../mixins/colors.less);
-
 .action-menu {
     @icon-size: 20px;
     @shadow: 1px 1px 1px @dark-gray-color-60;
@@ -7,6 +5,7 @@
     display: inline-block;
     position: relative;
     text-align: right;
+    vertical-align: middle;
 
     .action-menu-icon {
         .square(@icon-size);
