--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -442,6 +442,7 @@ table.default {
     .actions {
         float: right;
         text-align: right;
+        white-space: nowrap;
         img, svg {
             vertical-align: middle;
         }
